parser/parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            |

   4  decl : ident TOKEN_COLON type TOKEN_SEMICOLON
   5       | ident TOKEN_COLON type_basic TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
   6       | ident TOKEN_COLON type_function TOKEN_ASSIGNMENT TOKEN_LCURLY stmt_list TOKEN_RCURLY
   7       | ident TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON

   8  type : type_basic
   9       | type_array
  10       | type_function

  11  type_basic : TOKEN_STRING
  12             | TOKEN_INTEGER
  13             | TOKEN_CHAR
  14             | TOKEN_BOOLEAN
  15             | TOKEN_VOID

  16  type_array : TOKEN_ARRAY TOKEN_LBRACKET opt_expr TOKEN_RBRACKET type

  17  type_function : TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN

  18  param_list :
  19             | non_empty_param_list

  20  non_empty_param_list : param
  21                       | param TOKEN_COMMA non_empty_param_list

  22  param : ident TOKEN_COLON type

  23  stmt_list :
  24            | stmt stmt_list

  25  stmt : matched
  26       | unmatched

  27  matched : decl
  28          | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN matched TOKEN_ELSE matched
  29          | expr TOKEN_SEMICOLON
  30          | TOKEN_LCURLY stmt_list TOKEN_RCURLY
  31          | TOKEN_RETURN opt_expr TOKEN_SEMICOLON
  32          | TOKEN_PRINT expr_list TOKEN_SEMICOLON
  33          | TOKEN_FOR TOKEN_LPAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RPAREN matched

  34  unmatched : TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
  35            | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN matched TOKEN_ELSE unmatched

  36  opt_expr :
  37           | expr

  38  expr_list :
  39            | non_empty_expr_list

  40  non_empty_expr_list : expr
  41                      | expr TOKEN_COMMA non_empty_expr_list

  42  expr : assignment_expr

  43  assignment_expr : assignment_expr TOKEN_ASSIGNMENT logical_expr
  44                  | logical_expr

  45  logical_expr : logical_expr TOKEN_LOGICAL_AND comparison_expr
  46               | logical_expr TOKEN_LOGICAL_OR comparison_expr
  47               | comparison_expr

  48  comparison_expr : comparison_expr TOKEN_GE add_expr
  49                  | comparison_expr TOKEN_LE add_expr
  50                  | comparison_expr TOKEN_GT add_expr
  51                  | comparison_expr TOKEN_LT add_expr
  52                  | comparison_expr TOKEN_EQ add_expr
  53                  | comparison_expr TOKEN_NE add_expr
  54                  | add_expr

  55  add_expr : add_expr TOKEN_PLUS mult_expr
  56           | add_expr TOKEN_MINUS mult_expr
  57           | mult_expr

  58  mult_expr : mult_expr TOKEN_MULTIPLY exponent
  59            | mult_expr TOKEN_DIVIDE exponent
  60            | mult_expr TOKEN_MODULUS exponent
  61            | exponent

  62  exponent : exponent TOKEN_EXPONENT factor
  63           | factor

  64  factor : TOKEN_MINUS factor
  65         | TOKEN_LOGICAL_NOT factor
  66         | pre_post_incr

  67  pre_post_incr : pre_post_incr TOKEN_POSTFIX_PLUS
  68                | pre_post_incr TOKEN_POSTFIX_MINUS
  69                | primary_expr

  70  primary_expr : ident
  71               | integer
  72               | string
  73               | char
  74               | TOKEN_TRUE
  75               | TOKEN_FALSE
  76               | TOKEN_LPAREN expr TOKEN_RPAREN
  77               | ident TOKEN_LPAREN expr_list TOKEN_RPAREN
  78               | ident TOKEN_LBRACKET expr_list TOKEN_RBRACKET

  79  ident : TOKEN_IDENT

  80  integer : TOKEN_INTEGER_LITERAL

  81  string : TOKEN_STRING_LITERAL

  82  char : TOKEN_CHAR_LITERAL

state 0
	$accept : . program $end  (0)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	ident  goto 5


state 1
	ident : TOKEN_IDENT .  (79)

	.  reduce 79


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	ident  goto 5


state 5
	decl : ident . TOKEN_COLON type TOKEN_SEMICOLON  (4)
	decl : ident . TOKEN_COLON type_basic TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON  (5)
	decl : ident . TOKEN_COLON type_function TOKEN_ASSIGNMENT TOKEN_LCURLY stmt_list TOKEN_RCURLY  (6)
	decl : ident . TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON  (7)

	TOKEN_COLON  shift 7
	.  error


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	decl : ident TOKEN_COLON . type TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON . type_basic TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON  (5)
	decl : ident TOKEN_COLON . type_function TOKEN_ASSIGNMENT TOKEN_LCURLY stmt_list TOKEN_RCURLY  (6)
	decl : ident TOKEN_COLON . type_array TOKEN_ASSIGNMENT TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON  (7)

	TOKEN_ARRAY  shift 8
	TOKEN_BOOLEAN  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_FUNCTION  shift 11
	TOKEN_INTEGER  shift 12
	TOKEN_STRING  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 15
	type_basic  goto 16
	type_array  goto 17
	type_function  goto 18


state 8
	type_array : TOKEN_ARRAY . TOKEN_LBRACKET opt_expr TOKEN_RBRACKET type  (16)

	TOKEN_LBRACKET  shift 19
	.  error


state 9
	type_basic : TOKEN_BOOLEAN .  (14)

	.  reduce 14


state 10
	type_basic : TOKEN_CHAR .  (13)

	.  reduce 13


state 11
	type_function : TOKEN_FUNCTION . type TOKEN_LPAREN param_list TOKEN_RPAREN  (17)

	TOKEN_ARRAY  shift 8
	TOKEN_BOOLEAN  shift 9
	TOKEN_CHAR  shift 10
	TOKEN_FUNCTION  shift 11
	TOKEN_INTEGER  shift 12
	TOKEN_STRING  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 20
	type_basic  goto 21
	type_array  goto 22
	type_function  goto 23


state 12
	type_basic : TOKEN_INTEGER .  (12)

	.  reduce 12


state 13
	type_basic : TOKEN_STRING .  (11)

	.  reduce 11


state 14
	type_basic : TOKEN_VOID .  (15)

	.  reduce 15


state 15
	decl : ident TOKEN_COLON type . TOKEN_SEMICOLON  (4)

	TOKEN_SEMICOLON  shift 24
	.  error


state 16
	decl : ident TOKEN_COLON type_basic . TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON  (5)
	type : type_basic .  (8)

	TOKEN_ASSIGNMENT  shift 25
	TOKEN_SEMICOLON  reduce 8


state 17
	decl : ident TOKEN_COLON type_array . TOKEN_ASSIGNMENT TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON  (7)
	type : type_array .  (9)

	TOKEN_ASSIGNMENT  shift 26
	TOKEN_SEMICOLON  reduce 9


state 18
	decl : ident TOKEN_COLON type_function . TOKEN_ASSIGNMENT TOKEN_LCURLY stmt_list TOKEN_RCURLY  (6)
	type : type_function .  (10)

	TOKEN_ASSIGNMENT  shift 27
	TOKEN_SEMICOLON  reduce 10


state 19
	type_array : TOKEN_ARRAY TOKEN_LBRACKET . opt_expr TOKEN_RBRACKET type  (16)
	opt_expr : .  (36)

	TOKEN_FALSE  shift 28
	TOKEN_TRUE  shift 29
	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 30
	TOKEN_INTEGER_LITERAL  shift 31
	TOKEN_CHAR_LITERAL  shift 32
	TOKEN_MINUS  shift 33
	TOKEN_LOGICAL_NOT  shift 34
	TOKEN_LPAREN  shift 35
	TOKEN_RBRACKET  reduce 36

	opt_expr  goto 36
	expr  goto 37
	assignment_expr  goto 38
	logical_expr  goto 39
	comparison_expr  goto 40
	add_expr  goto 41
	mult_expr  goto 42
	exponent  goto 43
	factor  goto 44
	pre_post_incr  goto 45
	primary_expr  goto 46
	integer  goto 47
	string  goto 48
	char  goto 49
	ident  goto 50


state 20
	type_function : TOKEN_FUNCTION type . TOKEN_LPAREN param_list TOKEN_RPAREN  (17)

	TOKEN_LPAREN  shift 51
	.  error


state 21
	type : type_basic .  (8)

	.  reduce 8


state 22
	type : type_array .  (9)

	.  reduce 9


state 23
	type : type_function .  (10)

	.  reduce 10


state 24
	decl : ident TOKEN_COLON type TOKEN_SEMICOLON .  (4)

	.  reduce 4


state 25
	decl : ident TOKEN_COLON type_basic TOKEN_ASSIGNMENT . expr TOKEN_SEMICOLON  (5)

	TOKEN_FALSE  shift 28
	TOKEN_TRUE  shift 29
	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 30
	TOKEN_INTEGER_LITERAL  shift 31
	TOKEN_CHAR_LITERAL  shift 32
	TOKEN_MINUS  shift 33
	TOKEN_LOGICAL_NOT  shift 34
	TOKEN_LPAREN  shift 35
	.  error

	expr  goto 52
	assignment_expr  goto 38
	logical_expr  goto 39
	comparison_expr  goto 40
	add_expr  goto 41
	mult_expr  goto 42
	exponent  goto 43
	factor  goto 44
	pre_post_incr  goto 45
	primary_expr  goto 46
	integer  goto 47
	string  goto 48
	char  goto 49
	ident  goto 50


state 26
	decl : ident TOKEN_COLON type_array TOKEN_ASSIGNMENT . TOKEN_LCURLY expr_list TOKEN_RCURLY TOKEN_SEMICOLON  (7)

	TOKEN_LCURLY  shift 53
	.  error


state 27
	decl : ident TOKEN_COLON type_function TOKEN_ASSIGNMENT . TOKEN_LCURLY stmt_list TOKEN_RCURLY  (6)

	TOKEN_LCURLY  shift 54
	.  error


state 28
	primary_expr : TOKEN_FALSE .  (75)

	.  reduce 75


state 29
	primary_expr : TOKEN_TRUE .  (74)

	.  reduce 74


state 30
	string : TOKEN_STRING_LITERAL .  (81)

	.  reduce 81


state 31
	integer : TOKEN_INTEGER_LITERAL .  (80)

	.  reduce 80


state 32
	char : TOKEN_CHAR_LITERAL .  (82)

	.  reduce 82


state 33
	factor : TOKEN_MINUS . factor  (64)

	TOKEN_FALSE  shift 28
	TOKEN_TRUE  shift 29
	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 30
	TOKEN_INTEGER_LITERAL  shift 31
	TOKEN_CHAR_LITERAL  shift 32
	TOKEN_MINUS  shift 33
	TOKEN_LOGICAL_NOT  shift 34
	TOKEN_LPAREN  shift 35
	.  error

	factor  goto 55
	pre_post_incr  goto 45
	primary_expr  goto 46
	integer  goto 47
	string  goto 48
	char  goto 49
	ident  goto 50


state 34
	factor : TOKEN_LOGICAL_NOT . factor  (65)

	TOKEN_FALSE  shift 28
	TOKEN_TRUE  shift 29
	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 30
	TOKEN_INTEGER_LITERAL  shift 31
	TOKEN_CHAR_LITERAL  shift 32
	TOKEN_MINUS  shift 33
	TOKEN_LOGICAL_NOT  shift 34
	TOKEN_LPAREN  shift 35
	.  error

	factor  goto 56
	pre_post_incr  goto 45
	primary_expr  goto 46
	integer  goto 47
	string  goto 48
	char  goto 49
	ident  goto 50


state 35
	primary_expr : TOKEN_LPAREN . expr TOKEN_RPAREN  (76)

	TOKEN_FALSE  shift 28
	TOKEN_TRUE  shift 29
	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 30
	TOKEN_INTEGER_LITERAL  shift 31
	TOKEN_CHAR_LITERAL  shift 32
	TOKEN_MINUS  shift 33
	TOKEN_LOGICAL_NOT  shift 34
	TOKEN_LPAREN  shift 35
	.  error

	expr  goto 57
	assignment_expr  goto 38
	logical_expr  goto 39
	comparison_expr  goto 40
	add_expr  goto 41
	mult_expr  goto 42
	exponent  goto 43
	factor  goto 44
	pre_post_incr  goto 45
	primary_expr  goto 46
	integer  goto 47
	string  goto 48
	char  goto 49
	ident  goto 50


state 36
	type_array : TOKEN_ARRAY TOKEN_LBRACKET opt_expr . TOKEN_RBRACKET type  (16)

	TOKEN_RBRACKET  shift 58
	.  error


state 37
	opt_expr : expr .  (37)

	.  reduce 37


state 38
	expr : assignment_expr .  (42)
	assignment_expr : assignment_expr . TOKEN_ASSIGNMENT logical_expr  (43)

	TOKEN_ASSIGNMENT  shift 59
	TOKEN_SEMICOLON  reduce 42
	TOKEN_RPAREN  reduce 42
	TOKEN_RBRACKET  reduce 42
	TOKEN_RCURLY  reduce 42
	TOKEN_COMMA  reduce 42


state 39
	assignment_expr : logical_expr .  (44)
	logical_expr : logical_expr . TOKEN_LOGICAL_AND comparison_expr  (45)
	logical_expr : logical_expr . TOKEN_LOGICAL_OR comparison_expr  (46)

	TOKEN_LOGICAL_AND  shift 60
	TOKEN_LOGICAL_OR  shift 61
	TOKEN_SEMICOLON  reduce 44
	TOKEN_ASSIGNMENT  reduce 44
	TOKEN_RPAREN  reduce 44
	TOKEN_RBRACKET  reduce 44
	TOKEN_RCURLY  reduce 44
	TOKEN_COMMA  reduce 44


state 40
	logical_expr : comparison_expr .  (47)
	comparison_expr : comparison_expr . TOKEN_GE add_expr  (48)
	comparison_expr : comparison_expr . TOKEN_LE add_expr  (49)
	comparison_expr : comparison_expr . TOKEN_GT add_expr  (50)
	comparison_expr : comparison_expr . TOKEN_LT add_expr  (51)
	comparison_expr : comparison_expr . TOKEN_EQ add_expr  (52)
	comparison_expr : comparison_expr . TOKEN_NE add_expr  (53)

	TOKEN_GE  shift 62
	TOKEN_LE  shift 63
	TOKEN_GT  shift 64
	TOKEN_LT  shift 65
	TOKEN_EQ  shift 66
	TOKEN_NE  shift 67
	TOKEN_SEMICOLON  reduce 47
	TOKEN_LOGICAL_AND  reduce 47
	TOKEN_LOGICAL_OR  reduce 47
	TOKEN_ASSIGNMENT  reduce 47
	TOKEN_RPAREN  reduce 47
	TOKEN_RBRACKET  reduce 47
	TOKEN_RCURLY  reduce 47
	TOKEN_COMMA  reduce 47


state 41
	comparison_expr : add_expr .  (54)
	add_expr : add_expr . TOKEN_PLUS mult_expr  (55)
	add_expr : add_expr . TOKEN_MINUS mult_expr  (56)

	TOKEN_PLUS  shift 68
	TOKEN_MINUS  shift 69
	TOKEN_SEMICOLON  reduce 54
	TOKEN_GE  reduce 54
	TOKEN_LE  reduce 54
	TOKEN_GT  reduce 54
	TOKEN_LT  reduce 54
	TOKEN_EQ  reduce 54
	TOKEN_NE  reduce 54
	TOKEN_LOGICAL_AND  reduce 54
	TOKEN_LOGICAL_OR  reduce 54
	TOKEN_ASSIGNMENT  reduce 54
	TOKEN_RPAREN  reduce 54
	TOKEN_RBRACKET  reduce 54
	TOKEN_RCURLY  reduce 54
	TOKEN_COMMA  reduce 54


state 42
	add_expr : mult_expr .  (57)
	mult_expr : mult_expr . TOKEN_MULTIPLY exponent  (58)
	mult_expr : mult_expr . TOKEN_DIVIDE exponent  (59)
	mult_expr : mult_expr . TOKEN_MODULUS exponent  (60)

	TOKEN_MULTIPLY  shift 70
	TOKEN_DIVIDE  shift 71
	TOKEN_MODULUS  shift 72
	TOKEN_SEMICOLON  reduce 57
	TOKEN_GE  reduce 57
	TOKEN_LE  reduce 57
	TOKEN_GT  reduce 57
	TOKEN_LT  reduce 57
	TOKEN_EQ  reduce 57
	TOKEN_NE  reduce 57
	TOKEN_PLUS  reduce 57
	TOKEN_MINUS  reduce 57
	TOKEN_LOGICAL_AND  reduce 57
	TOKEN_LOGICAL_OR  reduce 57
	TOKEN_ASSIGNMENT  reduce 57
	TOKEN_RPAREN  reduce 57
	TOKEN_RBRACKET  reduce 57
	TOKEN_RCURLY  reduce 57
	TOKEN_COMMA  reduce 57


state 43
	mult_expr : exponent .  (61)
	exponent : exponent . TOKEN_EXPONENT factor  (62)

	TOKEN_EXPONENT  shift 73
	TOKEN_SEMICOLON  reduce 61
	TOKEN_GE  reduce 61
	TOKEN_LE  reduce 61
	TOKEN_GT  reduce 61
	TOKEN_LT  reduce 61
	TOKEN_EQ  reduce 61
	TOKEN_NE  reduce 61
	TOKEN_MULTIPLY  reduce 61
	TOKEN_DIVIDE  reduce 61
	TOKEN_MODULUS  reduce 61
	TOKEN_PLUS  reduce 61
	TOKEN_MINUS  reduce 61
	TOKEN_LOGICAL_AND  reduce 61
	TOKEN_LOGICAL_OR  reduce 61
	TOKEN_ASSIGNMENT  reduce 61
	TOKEN_RPAREN  reduce 61
	TOKEN_RBRACKET  reduce 61
	TOKEN_RCURLY  reduce 61
	TOKEN_COMMA  reduce 61


state 44
	exponent : factor .  (63)

	.  reduce 63


state 45
	factor : pre_post_incr .  (66)
	pre_post_incr : pre_post_incr . TOKEN_POSTFIX_PLUS  (67)
	pre_post_incr : pre_post_incr . TOKEN_POSTFIX_MINUS  (68)

	TOKEN_POSTFIX_PLUS  shift 74
	TOKEN_POSTFIX_MINUS  shift 75
	TOKEN_SEMICOLON  reduce 66
	TOKEN_GE  reduce 66
	TOKEN_LE  reduce 66
	TOKEN_GT  reduce 66
	TOKEN_LT  reduce 66
	TOKEN_EQ  reduce 66
	TOKEN_NE  reduce 66
	TOKEN_EXPONENT  reduce 66
	TOKEN_MULTIPLY  reduce 66
	TOKEN_DIVIDE  reduce 66
	TOKEN_MODULUS  reduce 66
	TOKEN_PLUS  reduce 66
	TOKEN_MINUS  reduce 66
	TOKEN_LOGICAL_AND  reduce 66
	TOKEN_LOGICAL_OR  reduce 66
	TOKEN_ASSIGNMENT  reduce 66
	TOKEN_RPAREN  reduce 66
	TOKEN_RBRACKET  reduce 66
	TOKEN_RCURLY  reduce 66
	TOKEN_COMMA  reduce 66


state 46
	pre_post_incr : primary_expr .  (69)

	.  reduce 69


state 47
	primary_expr : integer .  (71)

	.  reduce 71


state 48
	primary_expr : string .  (72)

	.  reduce 72


state 49
	primary_expr : char .  (73)

	.  reduce 73

